--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "matrix-js-sdk": "^27.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   }
 }
